# just-a-seq-py

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
